k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: preview-app
  labels:
    app: preview-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: preview-app
